--- a/common/robolectric/3.4.2/PREBUILT/download-libs.gradle
+++ b/common/robolectric/3.4.2/PREBUILT/download-libs.gradle
@@ -2,7 +2,6 @@
  * Modified from https://gist.github.com/xian/05c4f27da6d4156b9827842217c2cd5c
  * Reference: http://robolectric.org/blog/2017/03/01/hermetic-builds/
  */
-
 defaultTasks 'copyLibs'
 
 def shadowArtifacts = [
@@ -24,8 +23,8 @@ repositories {
 
 configurations {
     sandbox
+    roboSources
 }
-
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
@@ -41,22 +40,33 @@ dependencies {
         compile shadowArtifact
         sandbox shadowArtifact
     }
+
+    def shadowArtifactsSet = shadowArtifacts.collect {it.toString()}  toSet()
+    configurations.runtime.resolvedConfiguration.resolvedArtifacts.each { ResolvedArtifact ra ->
+        ModuleVersionIdentifier id = ra.moduleVersion.id
+        // download only core sources. relax restriction if required
+        if ("org.robolectric".equals(id.group) && !shadowArtifactsSet.contains(id.toString())) {
+            roboSources("${id.group}:${id.name}:${id.version}:sources") {
+                transitive = false
+            }
+        }
+    }
 }
 
 
 task copyLibs(type: Copy) {
-    into "$buildDir/lib"
     from configurations.compile
+    from configurations.roboSources
+    into "$buildDir/lib"
 
     doLast {
         def f = new File("$buildDir/classpath_jars.mk")
         f.delete()
-
-        f << "my_robolectric_runtime_deps := \\\n"
-
-        source.forEach { file ->
-            f << "    lib/${file.name} \\\n"
-        }
-        f << "\n"
+        def jars = source.getFiles()
+            .collect { it.name }
+            .sort()
+            .findAll { !it.endsWith("sources.jar") }
+            .collect { "    lib/${it} " }
+        f << "my_robolectric_runtime_deps := \\\n" << jars.join("\\\n") << "\n"
     }
 }
